Added some basic javascript code.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <head>
 <title>2wasted</title>
+<script type="text/javascript">
+  var x = prompt("x = ");
+  console.log(x);
+</script>
 </head>
+
 
 <body>
 empty
